services/provocateur-interviewer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: provocateur-interviewer
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - provocateur.lab.apj.dev
    secretName: provocateur-tls
  rules:
  - host: provocateur.lab.apj.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: provocateur-interviewer
            port:
              number: 80
